--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^3.4.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
